--- a/index.html
+++ b/index.html
@@ -550,42 +550,42 @@ body.theme-neon p {
       <h3>Featured Projects</h3>
       <div class="projects">
         <div class="project-card" tabindex="0">
-          <img src="images/inklingo.png" alt="Inklingo">
+          <img src="inklingo.png" alt="Inklingo">
           <div class="content">
             <h4>Inklingo</h4>
             <a class="btn" href="https://youware.app/project/inklingobyabhayzangir-1n070tfk06?enter_from=share&invite_code=KM8JF4WE4Q" target="_blank" rel="noopener">View</a>
           </div>
         </div>
         <div class="project-card" tabindex="0">
-          <img src="images/mindleap.png" alt="Mindleap">
+          <img src="mindleap.png" alt="Mindleap">
           <div class="content">
             <h4>Mindleap</h4>
             <a class="btn" href="https://youware.app/project/mindleapbyabhayzangir-96ucuxg077?enter_from=share&invite_code=KM8JF4WE4Q" target="_blank" rel="noopener">View</a>
           </div>
         </div>
         <div class="project-card" tabindex="0">
-          <img src="images/dressdeck.png" alt="DressDeck">
+          <img src="dressdeck.png" alt="DressDeck">
           <div class="content">
             <h4>DressDeck</h4>
             <a class="btn" href="https://youware.app/project/dressdeckbyabhayzangir-m5oakeyebw?enter_from=share&invite_code=KM8JF4WE4Q" target="_blank" rel="noopener">View</a>
           </div>
         </div>
         <div class="project-card" tabindex="0">
-          <img src="images/blockiva.png" alt="Blockiva">
+          <img src="blockiva.png" alt="Blockiva">
           <div class="content">
             <h4>Blockiva</h4>
             <a class="btn" href="https://youware.app/project/blockivabyabhayzangir-yes4dzg263?enter_from=share&invite_code=KM8JF4WE4Q" target="_blank" rel="noopener">View</a>
           </div>
         </div>
         <div class="project-card" tabindex="0">
-          <img src="images/retroos.png" alt="RetroOS">
+          <img src="retroos.png" alt="RetroOS">
           <div class="content">
             <h4>RetroOS</h4>
             <a class="btn" href="https://youware.app/project/retroosbyabhayzangir-g2veqfax5x?enter_from=share&invite_code=KM8JF4WE4Q" target="_blank" rel="noopener">View</a>
           </div>
         </div>
         <div class="project-card" tabindex="0">
-          <img src="images/neocyberos.png" alt="NeoCyberOS">
+          <img src="neocyberos.png" alt="NeoCyberOS">
           <div class="content">
             <h4>NeoCyberOS</h4>
             <a class="btn" href="https://youware.app/project/neocyberosbyabhayzangir-9ip2g3c5g3?enter_from=share&invite_code=KM8JF4WE4Q" target="_blank" rel="noopener">View</a>
@@ -656,3 +656,4 @@ if (savedTheme) applyTheme(savedTheme);
 </script>
 </body>
 </html>
+
