--- a/index.html
+++ b/index.html
@@ -599,23 +599,23 @@ body.theme-neon p {
       <div class="scripts">
         <div class="script-card" tabindex="0">
           <h4>ICT Killzones & Pivots</h4>
-          <a class="btn" href="MyPineScripts/ict killzones n pivots.txt" target="_blank" rel="noopener">View</a>
+          <a class="btn" href="ict killzones n pivots.txt" target="_blank" rel="noopener">View</a>
         </div>
         <div class="script-card" tabindex="0">
           <h4>MTF OB & FVG</h4>
-          <a class="btn" href="MyPineScripts/mtf OB n FVG.txt" target="_blank" rel="noopener">View</a>
+          <a class="btn" href="mtf OB n FVG.txt" target="_blank" rel="noopener">View</a>
         </div>
         <div class="script-card" tabindex="0">
           <h4>Multicator with ICT SMC</h4>
-          <a class="btn" href="MyPineScripts/multicator with ict smc.txt" target="_blank" rel="noopener">View</a>
+          <a class="btn" href="multicator with ict smc.txt" target="_blank" rel="noopener">View</a>
         </div>
         <div class="script-card" tabindex="0">
           <h4>OB by AbhayZangir</h4>
-          <a class="btn" href="MyPineScripts/ob by abhayzangir.txt" target="_blank" rel="noopener">View</a>
+          <a class="btn" href="ob by abhayzangir.txt" target="_blank" rel="noopener">View</a>
         </div>
         <div class="script-card" tabindex="0">
           <h4>SMC Toolkit Enhanced</h4>
-          <a class="btn" href="MyPineScripts/smc toolkit enhanced.txt" target="_blank" rel="noopener">View</a>
+          <a class="btn" href="smc toolkit enhanced.txt" target="_blank" rel="noopener">View</a>
         </div>
       </div>
     </section>
@@ -656,4 +656,5 @@ if (savedTheme) applyTheme(savedTheme);
 </script>
 </body>
 </html>
+
 
